<resources>
	<string name="_0_0400"
		translatable="false">0.0400%</string>
	<string name="_0_00"
		translatable="false">0.00</string>
	<string name="a"
		translatable="false">A</string>
	<string name="eur"
		translatable="false">EUR</string>
	<string name="usd"
		translatable="false">USD</string>
	<string name="inr"
		translatable="false">INR</string>
	<string name="currency_wiki"
		translatable="false">Currency.wiki</string>
	<string name="usa"
		translatable="false">USD</string>
	<string name="_1_usd"
		translatable="false">1 USD  </string>
	<string name="line_chart">Chart</string>
	<string name="app_name">CurrencyConverter</string>
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="search">Search</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="cpv_default_title">Select a Color</string>
	<string name="cpv_presets">Presets</string>
	<string name="cpv_custom">Custom</string>
	<string name="cpv_select">Select</string>
	<string name="cpv_transparency">Transparency</string>
	<string name="widget_transparency">Widget Transparency</string>
	<string name="rate_the_app">Please rate our app!</string>
	<string name="rate_app_desc">Tap on stars and &quot;Open With Google Play Store&quot; to rate</string>
	<string name="not_now">NOT NOW</string>
	<string name="updated_date">Updated:</string>
	<string name="monetary_format">Monetary format</string>
	<string name="decimal_format">Decimal format</string>
	<string name="don_t_show">Don\'t show</string>
	<string name="support">Support</string>
	<string name="terms">Terms</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="remove_ads">Remove Ads</string>
	<string name="sub_remove_ads">Support our project with a small yearly subscription</string>
	<string name="language">Language</string>
	<string name="color_selection">Color Selection</string>
	<string name="select_the_gradient">Select the gradient</string>
	<string name="unlocked">Unlocked</string>
	<string name="locked">Locked</string>
	<string name="try_this_color">Try this color</string>
	<string name="sub_try_this_color">Try before you unlock</string>
	<string name="unlock">Unlock</string>
	<string name="sub_unlock">Unlock this color for {item_price}</string>
	<string name="theme">Theme</string>
	<string name="light">Light</string>
	<string name="dark">Dark</string>
	<string name="wedget_transparency"
		>Widget Transparency</string>
	<string name="by_currency_wiki">By: Currency.wiki</string>
	<string name="visual_size">Visual Size</string>
	<string name="small">Small</string>
	<string name="medium">Medium</string>
	<string name="large">Large</string>
	<string name="when_opening_app">App Logo Launcher</string>
	<string name="display_multi_converter">Multi-Converter</string>
	<string name="sub_multi_converter">Will open multi-converter by default. NOTE: This feature only works with app logo launcher.</string>
	<string name="dislay">Display</string>
	<string name="display_currency_code">Display Currency Code</string>
	<string name="display_currency_symbol">Display Currency Symbol</string>
	<string name="display_currency_flag">Display Currency Flag</string>
	<string name="date_format">Date Format</string>
	<string name="click_here">⇒ Click Here</string>
	<string name="learn_how_to_nadd_widget">Learn how to add widget</string>
	<string name="selected">SELECTED</string>
	<string name="currency_list">CURRENCY LIST</string>
	<string name="title_add_currency">ADD CURRENCY</string>
	<string name="title_configure">CONFIGURE</string>
	<string name="add_widget">Add Widget</string>
	<string name="convert_widget_single">Convert - Single</string>
	<string name="convert_widget_list">Convert - List</string>
	<string name="title_select_base_currency">Select Base Currency</string>
	<string name="amount">Amount</string>
	<string name="error_amount_empty">Please enter the amount correctly</string>
	<string name="internet_error">Please connect to the internet</string>
	<string name="facebook_app_id"
		>248045086948204</string>
	<string name="fb_login_protocol_scheme">fb248045086948204</string>
	<string name="tab_text_1">Tab 1</string>
	<string name="tab_text_2">Tab 2</string>
	<string name="title_activity_add_currency">AddCurrencyActivity</string>
	<string name="monetary_format_1">1234.56</string>
	<string name="monetary_format_2">1.234,56</string>
	<string name="monetary_format_3">1 234.56</string>
	<string name="monetary_format_4">1 234,56</string>
	<string name="decimal_format_1">.02</string>
	<string name="decimal_format_2">.003</string>
	<string name="decimal_format_3">.0004</string>
	<string name="decimal_format_4">.00005</string>
	<string name="decimal_format_5">.000006</string>
	<string name="date_format_1">mm/dd/yy</string>
	<string name="date_format_2">dd/mm/yy</string>
	<string name="iso">ISO</string>
	<string name="AED">United Arab Emirates Dirham</string>
	<string name="AFN">Afghan Afghani</string>
	<string name="ALL">Albanian Lek</string>
	<string name="AMD">Armenian Dram</string>
	<string name="ANG">Netherlands Antillean Guilder</string>
	<string name="AOA">Angolan Kwanza</string>
	<string name="ARS">Argentine Peso</string>
	<string name="AUD">Australian Dollar</string>
	<string name="AWG">Aruban Florin</string>
	<string name="AZN">Azerbaijani Manat</string>
	<string name="BAM">Bosnia Herzegovina Convertible Mark</string>
	<string name="BBD">Barbadian Dollar</string>
	<string name="BDT">Bangladeshi Taka</string>
	<string name="BGN">Bulgarian Lev</string>
	<string name="BHD">Bahraini Dinar</string>
	<string name="BIF">Burundian Franc</string>
	<string name="BMD">Bermudan Dollar</string>
	<string name="BND">Brunei Dollar</string>
	<string name="BOB">Bolivian Boliviano</string>
	<string name="BRL">Brazilian Real</string>
	<string name="BSD">Bahamian Dollar</string>
	<string name="BTC">Bitcoin</string>
	<string name="BTN">Bhutanese Ngultrum</string>
	<string name="BWP">Botswanan Pula</string>
	<string name="BYN">Belarusian Ruble</string>
	<string name="BZD">Belize Dollar</string>
	<string name="CAD">Canadian Dollar</string>
	<string name="CDF">Congolese Franc</string>
	<string name="CHF">Swiss Franc</string>
	<string name="CLF">Chilean Unit of Account (UF)</string>
	<string name="CLP">Chilean Peso</string>
	<string name="CNY">Chinese Yuan</string>
	<string name="COP">Colombian Peso</string>
	<string name="CRC">Costa Rican Colón</string>
	<string name="CUC">Cuban Convertible Peso</string>
	<string name="CUP">Cuban Peso</string>
	<string name="CVE">Cape Verdean Escudo</string>
	<string name="CZK">Czech Republic Koruna</string>
	<string name="DJF">Djiboutian Franc</string>
	<string name="DKK">Danish Krone</string>
	<string name="DOP">Dominican Peso</string>
	<string name="DZD">Algerian Dinar</string>
	<string name="EGP">Egyptian Pound</string>
	<string name="ERN">Eritrean Nakfa</string>
	<string name="ETB">Ethiopian Birr</string>
	<string name="EUR">Euro</string>
	<string name="FJD">Fijian Dollar</string>
	<string name="FKP">Falkland Islands Pound</string>
	<string name="GBP">British Pound Sterling</string>
	<string name="GEL">Georgian Lari</string>
	<string name="GGP">Guernsey Pound</string>
	<string name="GHS">Ghanaian Cedi</string>
	<string name="GIP">Gibraltar Pound</string>
	<string name="GMD">Gambian Dalasi</string>
	<string name="GNF">Guinean Franc</string>
	<string name="GTQ">Guatemalan Quetzal</string>
	<string name="GYD">Guyanaese Dollar</string>
	<string name="HKD">Hong Kong Dollar</string>
	<string name="HNL">Honduran Lempira</string>
	<string name="HRK">Croatian Kuna</string>
	<string name="HTG">Haitian Gourde</string>
	<string name="HUF">Hungarian Forint</string>
	<string name="IDR">Indonesian Rupiah</string>
	<string name="ILS">Israeli New Sheqel</string>
	<string name="IMP">Manx pound</string>
	<string name="INR">Indian Rupee</string>
	<string name="IQD">Iraqi Dinar</string>
	<string name="IRR">Iranian Rial</string>
	<string name="ISK">Icelandic Króna</string>
	<string name="JEP">Jersey Pound</string>
	<string name="JMD">Jamaican Dollar</string>
	<string name="JOD">Jordanian Dinar</string>
	<string name="JPY">Japanese Yen</string>
	<string name="KES">Kenyan Shilling</string>
	<string name="KGS">Kyrgystani Som</string>
	<string name="KHR">Cambodian Riel</string>
	<string name="KMF">Comorian Franc</string>
	<string name="KPW">North Korean Won</string>
	<string name="KRW">South Korean Won</string>
	<string name="KWD">Kuwaiti Dinar</string>
	<string name="KYD">Cayman Islands Dollar</string>
	<string name="KZT">Kazakhstani Tenge</string>
	<string name="LAK">Laotian Kip</string>
	<string name="LBP">Lebanese Pound</string>
	<string name="LKR">Sri Lankan Rupee</string>
	<string name="LRD">Liberian Dollar</string>
	<string name="LSL">Lesotho Loti</string>
	<string name="LTL">Lithuanian Litas</string>
	<string name="LYD">Libyan Dinar</string>
	<string name="MAD">Moroccan Dirham</string>
	<string name="MDL">Moldovan Leu</string>
	<string name="MGA">Malagasy Ariary</string>
	<string name="MKD">Macedonian Denar</string>
	<string name="MMK">Myanma Kyat</string>
	<string name="MNT">Mongolian Tugrik</string>
	<string name="MOP">Macanese Pataca</string>
	<string name="MRO">Mauritanian Ouguiya</string>
	<string name="MUR">Mauritian Rupee</string>
	<string name="MVR">Maldivian Rufiyaa</string>
	<string name="MWK">Malawian Kwacha</string>
	<string name="MXN">Mexican Peso</string>
	<string name="MYR">Malaysian Ringgit</string>
	<string name="MZN">Mozambican Metical</string>
	<string name="NAD">Namibian Dollar</string>
	<string name="NGN">Nigerian Naira</string>
	<string name="NIO">Nicaraguan Córdoba</string>
	<string name="NOK">Norwegian Krone</string>
	<string name="NPR">Nepalese Rupee</string>
	<string name="NZD">New Zealand Dollar</string>
	<string name="OMR">Omani Rial</string>
	<string name="PAB">Panamanian Balboa</string>
	<string name="PEN">Peruvian Nuevo Sol</string>
	<string name="PGK">Papua New Guinean Kina</string>
	<string name="PHP">Philippine Peso</string>
	<string name="PKR">Pakistani Rupee</string>
	<string name="PLN">Polish Zloty</string>
	<string name="PYG">Paraguayan Guarani</string>
	<string name="QAR">Qatari Rial</string>
	<string name="RON">Romanian Leu</string>
	<string name="RSD">Serbian Dinar</string>
	<string name="RUB">Russian Ruble</string>
	<string name="RWF">Rwandan Franc</string>
	<string name="SAR">Saudi Riyal</string>
	<string name="SBD">Solomon Islands Dollar</string>
	<string name="SCR">Seychellois Rupee</string>
	<string name="SDG">Sudanese Pound</string>
	<string name="SEK">Swedish Krona</string>
	<string name="SGD">Singapore Dollar</string>
	<string name="SHP">Saint Helena Pound</string>
	<string name="SLL">Sierra Leonean Leone</string>
	<string name="SOS">Somali Shilling</string>
	<string name="SRD">Surinamese Dollar</string>
	<string name="STD">São Tomé and Príncipe Dobra</string>
	<string name="SVC">Salvadoran Colón</string>
	<string name="SYP">Syrian Pound</string>
	<string name="SZL">Swazi Lilangeni</string>
	<string name="THB">Thai Baht</string>
	<string name="TJS">Tajikistani Somoni</string>
	<string name="TMT">Turkmenistani Manat</string>
	<string name="TND">Tunisian Dinar</string>
	<string name="TOP">Tongan Paʻanga</string>
	<string name="TRY">Turkish Lira</string>
	<string name="TTD">Trinidad and Tobago Dollar</string>
	<string name="TWD">New Taiwan Dollar</string>
	<string name="TZS">Tanzanian Shilling</string>
	<string name="UAH">Ukrainian Hryvnia</string>
	<string name="UGX">Ugandan Shilling</string>
	<string name="USD">United States Dollar</string>
	<string name="UYU">Uruguayan Peso</string>
	<string name="UZS">Uzbekistan Som</string>
</resources>