<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/imgContainer"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:contentDescription="@string/app_name"
		android:scaleType="fitXY" />

	<LinearLayout
		android:id="@+id/layout_list_widget"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="@drawable/widget_background"
		android:paddingStart="@dimen/_4sdp"
		android:paddingTop="@dimen/_6sdp"
		android:paddingEnd="@dimen/_6sdp"
		android:paddingBottom="@dimen/_6sdp">

		<TextView
			android:id="@+id/txtSymbolLight"
			style="@style/boldTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:fontFamily="@font/roboto_bold"
			android:background="@drawable/bg_bottom_light"
			android:paddingStart="@dimen/_1sdp"
			android:paddingTop="@dimen/_2sdp"
			android:text="@string/_1_usd"
			android:paddingEnd="@dimen/_1sdp"
			android:textColor="@color/white"
			android:textSize="@dimen/_13sdp"
			android:visibility="gone" />

		<TextView
			android:id="@+id/txtSymbolDark"
			style="@style/boldTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:fontFamily="@font/roboto_bold"
			android:text="@string/_1_usd"
			android:background="@drawable/bg_bottom_dark"
			android:paddingStart="@dimen/_1sdp"
			android:paddingTop="@dimen/_2sdp"
			android:paddingEnd="@dimen/_1sdp"
			android:textColor="@color/black"
			android:textSize="@dimen/_13sdp" />

		<ListView
			android:id="@+id/listCurrency"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:animateLayoutChanges="false"
			android:clipToPadding="false"
			android:divider="@null"
			android:scrollbars="none" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:focusable="true"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/txtProvider"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/_6sdp"
				android:layout_marginTop="@dimen/_5sdp"
				android:layout_weight="1"
				android:fontFamily="@font/roboto_medium"
				android:text="@string/by_currency_wiki"
				android:textColor="@color/white"
				android:textSize="@dimen/_10sdp" />

			<ImageButton
				android:id="@+id/btnSettings"
				android:layout_width="@dimen/_18sdp"
				android:layout_height="@dimen/_18sdp"
				android:layout_marginTop="@dimen/_5sdp"
				android:background="@drawable/bg_button_ripple"
				android:contentDescription="@string/app_name"
				android:padding="@dimen/_2sdp"
				android:scaleType="fitCenter"
				android:src="@drawable/ic_settings" />

			<ImageButton
				android:id="@+id/btnSettingsDark"
				android:layout_width="@dimen/_18sdp"
				android:layout_height="@dimen/_18sdp"
				android:layout_marginTop="@dimen/_5sdp"
				android:background="@drawable/bg_button_ripple_dark"
				android:contentDescription="@string/app_name"
				android:padding="@dimen/_2sdp"
				android:scaleType="fitCenter"
				android:src="@drawable/ic_settings_dark"
				android:visibility="gone" />

			<TextView
				android:id="@+id/tvPipe"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/_3sdp"
				android:fontFamily="@font/roboto_medium"
				android:layout_marginTop="@dimen/_5sdp"
				android:layout_marginRight="@dimen/_3sdp"
				android:padding="@dimen/_2sdp"
				android:text="|" />

			<ImageButton
				android:id="@+id/btnRefresh"
				android:layout_width="@dimen/_18sdp"
				android:layout_height="@dimen/_18sdp"
				android:layout_marginTop="@dimen/_5sdp"
				android:background="@drawable/bg_button_ripple"
				android:contentDescription="@string/app_name"
				android:padding="@dimen/_2sdp"
				android:scaleType="fitCenter"
				android:src="@drawable/ic_refresh" />

			<ImageButton
				android:id="@+id/btnRefreshDark"
				android:layout_width="@dimen/_18sdp"
				android:layout_height="@dimen/_18sdp"
				android:layout_marginTop="@dimen/_5sdp"
				android:background="@drawable/bg_button_ripple_dark"
				android:contentDescription="@string/app_name"
				android:padding="@dimen/_2sdp"
				android:scaleType="fitCenter"
				android:src="@drawable/ic_refresh_dark"
				android:visibility="gone" />

			<ProgressBar
				android:id="@+id/progressWhite"
				android:layout_width="@dimen/_18sdp"
				android:layout_height="@dimen/_18sdp"
				android:layout_gravity="center"
				android:layout_marginTop="@dimen/_5sdp"
				android:indeterminateTint="@color/white"
				android:padding="@dimen/_2sdp"
				android:visibility="gone" />

			<ProgressBar
				android:id="@+id/progressDark"
				android:layout_width="@dimen/_18sdp"
				android:layout_height="@dimen/_18sdp"
				android:layout_gravity="center"
				android:layout_marginEnd="@dimen/_5sdp"
				android:indeterminateTint="@color/black"
				android:padding="@dimen/_2sdp"
				android:visibility="gone" />
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
